--- a/AirBnb_2019_New_York_EDA.ipynb
+++ b/AirBnb_2019_New_York_EDA.ipynb
@@ -569,13 +569,38 @@
       "cell_type": "code",
       "source": [
         "# Write your code to make your dataset analysis ready.\n",
-        "df1 = df.drop(['id','host_id','host_name','last_review'],axis=1)\n",
-        "df1['reviews_per_month'] = df1['reviews_per_month'].fillna('median')\n",
-        "df1 = df1.dropna(subset=['name'])\n",
+        "df1 = df.drop(['last_review'],axis=1)\n",
+        "\n",
+        "df1['reviews_per_month'] = df1['reviews_per_month'].fillna(df1['reviews_per_month'].median())\n",
+        "\n",
+        "df1 = df1.loc[df1['price']>0]\n",
         "df1.head()"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "uDst2-y8H7wn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1 = df1.dropna(subset=['name', 'host_name'])\n",
+        "df1.head()"
+      ],
+      "metadata": {
+        "id": "EO4wiSekIzd-"
       },
       "execution_count": null,
       "outputs": []
@@ -621,7 +646,7 @@
       "source": [
         "# Chart - 1 visualization code\n",
         "\n",
-        "fig = px.histogram(df1, x='price')\n",
+        "fig = px.histogram(df1, x='price',nbins=20, title=\"Price Distribution\",log_y=True)\n",
         "# Labeling x and y axes\n",
         "fig.update_layout(xaxis_title='Price', yaxis_title='Count')\n",
         "# Show the plot\n",
@@ -1027,7 +1052,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code\n"
+        "# Chart - 6 visualization code\n",
+        "num_cols = ['price', 'minimum_nights', 'number_of_reviews']\n",
+        "correlation_matrix = df1[num_cols].corr()\n",
+        "\n",
+        "# Plotting the correlation matrix\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
+        "plt.title('Correlation Matrix of Airbnb Listings')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -1102,7 +1135,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code"
+        "# Chart - 7 visualization code\n",
+        "fig = px.box(df1,\n",
+        "             x='neighbourhood_group',\n",
+        "             y='price',\n",
+        "             color='neighbourhood_group',\n",
+        "             title='Price Distribution by Neighbourhood Group')\n",
+        "\n",
+        "fig.show()"
       ],
       "metadata": {
         "id": "lqAIGUfyphqO"
@@ -1177,7 +1217,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 8 visualization code"
+        "# Chart - 8 visualization code\n",
+        "fig = px.histogram(df1, x='availability_365', nbins=50,log_y=True,\n",
+        "                   title='Available Days',\n",
+        "                   labels={'availability_365':'Available Days'},\n",
+        "                   template='plotly_white')\n",
+        "\n",
+        "fig.show()"
       ],
       "metadata": {
         "id": "TdPTWpAVphqO"
@@ -1252,7 +1298,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code"
+        "# Chart - 9 visualization code\n"
       ],
       "metadata": {
         "id": "B2aS4O1ophqO"
