--- a/AirBnb_2019_New_York_EDA.ipynb
+++ b/AirBnb_2019_New_York_EDA.ipynb
@@ -117,7 +117,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Project Name**    -\n",
-        "\n"
+        "**AirBnb Bookings Analysis Exploratory Data **\n"
       ],
       "metadata": {
         "id": "vncDsAP0Gaoa"
@@ -126,12 +126,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Project Type**    - EDA\n",
+        "##### **Contribution**    - Individual:- Abu Azlan Nadaf\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
